# stellar-defi-toolkit

./: .gitignore  CHANGELOG.md  CIRCUIT_BREAKER_ENHANCEMENTS.md  CIRCUIT_BREAKER_README.md  CLI_LIQUIDATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PULL_REQUEST_SUMMARY.md  README.md  STAKING_README.md
cli/: main.ts
cli/src/: borrow.rs  lending_client.rs
docs/: CIRCUIT_BREAKER_OPERATOR_GUIDE.md  CIRCUIT_BREAKER_V2_README.md  circuit_breaker_guide.md  staking_contract.md
examples/: circuit_breaker_demo.rs  decentralized_oracle_demo.rs  liquidity_pool.rs  stablecoin_demo.rs  staking.rs  token_deployment.rs  yield_vault.rs
governance/src/: proposal.rs  storage.rs
src/: lib.rs  main.rs
src/contracts/: circuit_breaker.rs  decentralized_oracle.rs  governance.rs  lending.rs  liquidity_pool.rs  mod.rs  oracle.rs  price_history.rs  price_oracle.rs  staking.rs
src/types/: lending.rs  pool.rs
staking/src/: constants.rs  storage.rs  types.rs
staking/src/test/: reward_distribution_tests.rs  unstaking_cooldown_tests.rs
test_snapshots/contracts/oracle/tests/: test_initialization.1.json  test_invalid_amount_fails.1.json  test_missing_price_fails.1.json  test_set_and_get_price.1.json  test_unauthorized_fails.1.json
tests/: circuit_breaker_comprehensive_tests.rs  circuit_breaker_tests.rs  integration_tests.rs
