[package]
name = "stellar-defi-toolkit"
version = "0.1.0"
edition = "2021"
autoexamples = false
authors = ["OpenAI <support@openai.com>"]
description = "Soroban-oriented lending and borrowing protocol primitives for Stellar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/stellar-defi-toolkit"
homepage = "https://github.com/yourusername/stellar-defi-toolkit"
keywords = ["stellar", "soroban", "defi", "lending", "borrowing"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
soroban-sdk = "21.0.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

# Unique identifiers
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[[bin]]
name = "stellar-defi-cli"
path = "src/main.rs"

[[example]]
name = "yield_vault"
path = "examples/yield_vault.rs"

[[example]]
name = "liquidity_pool"
path = "examples/liquidity_pool.rs"

[lib]
name = "stellar_defi_toolkit"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
